syntax = "proto3";
option csharp_namespace = "Discount.Grpc";
package discount;

service Discount {
  rpc GetDiscount (GetDiscountRequest) returns (CoponModel);
  rpc CreateDiscount (CreateDiscountRequest) returns (CoponModel);
  rpc UpdateDiscount (UpdateDiscountRequest) returns (CoponModel);
  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}
message GetDiscountRequest{
	string productName=1;
}
message CoponModel{
	int32 id=1;
	string productName=2;
	string discription=3;
	int32 amount=4;
}
message CreateDiscountRequest{
	CoponModel copon=1;
}
message UpdateDiscountRequest{
	CoponModel copon=1;
}
message DeleteDiscountRequest{
	string productName=1;
}
message DeleteDiscountResponse{
	bool success=1;
}